fixing xy-centered on small devices on avatatr.\

--- a/app/assets/styles/modules/components/_xy-centered.css
+++ b/app/assets/styles/modules/components/_xy-centered.css
@@ -9,7 +9,7 @@
     padding: 0 8px;
   }
   &--to-top-until-large {
-    top: 45%;
+    top: 47%;
     @mixin atLarge {
       top: 50%;
     }
